kubernetes/apps/default/mealie/app/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: mealie
  namespace: default
spec:
  hostnames:
    - mealie.alumpe.de
  parentRefs:
    - name: envoy-external
      namespace: network
  rules:
    - backendRefs:
        - name: mealie
          port: 9000
